--- a/src/app/master-layout/master-layout.component.html
+++ b/src/app/master-layout/master-layout.component.html
@@ -1,4 +1,4 @@
-<mat-card style="display: flex;">
+<mat-card style="display: flex;width:100%">
     <div class="content">
         <mat-card class="details">
             <ng-content select="#details"></ng-content>
